--- a/TaskOne/Views/MainWindow.xaml
+++ b/TaskOne/Views/MainWindow.xaml
@@ -3,14 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:vn="clr-namespace:TaskOne.ViewModels"
              xmlns:fa="http://schemas.fontawesome.com/icons/"
              mc:Ignorable="d"
              d:DesignHeight="600" d:DesignWidth="600">
-    <Window.Resources>
-        <vn:MainWindowViewModel x:Key="ViewModel" />
-    </Window.Resources>
-    <Grid  DataContext="{Binding Source={StaticResource ViewModel }}">
+   
+    <Grid>
         <Grid.ColumnDefinitions >
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -46,8 +43,10 @@
                      Width="50"  
                      Margin="5,5,5,5" 
                      Text="{Binding NumberOfLetters}"/>
-            <Button Content="Убрать слова и знаки припинания" 
+            <Button Content="Убрать слова" 
                     Command="{Binding RemoveLetter }"/>
+            <Button Content="Убрать знаки припинания"
+                    Command="{Binding  RemoveSigns }"/>
             <Button Content="Очистить." 
                     Command="{Binding ClearFile }"/>
            
